--- a/apache/docker-compose.yml
+++ b/apache/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   apache:
     build: .
-    restart: always
+    restart: unless-stopped
     ports:
       - 127.0.0.1:8000:80
     volumes:
