--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3'
 
 services:
   pihole:
+    container_name: pihole
     image: pihole/pihole:latest
     restart: unless-stopped
+    network_mode: host
     environment:
       TZ: "America/NewYork"
       DNS1: 208.67.222.222
@@ -12,12 +14,3 @@ services:
     volumes:
        - ./etc-pihole:/etc/pihole/
        - ./etc-dnsmasq.d:/etc/dnsmasq.d/
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      - "67:67/udp"
-      - "127.0.0.1:8000:80/tcp"
-    dns:
-      - 127.0.0.1
-    cap_add:
-      - NET_ADMIN
