improve docker-compose/Makefile consistency

--- a/homeassistant/Makefile
+++ b/homeassistant/Makefile
@@ -10,10 +10,9 @@ restart:
 logs:
 	docker-compose logs -f
 
-rm: down
-	docker-compose rm
-
-clean: rm
-	rm -rf ./config/* ./config/.cloud/ ./config/.storage/ ./config/.HA_VERSION
+clean:
+	docker-compose down -t 0
+	docker-compose rm -fv
+	sudo rm -rf ./config/* ./config/.cloud/ ./config/.storage/ ./config/.HA_VERSION
 
 .PHONY: *
