--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   homeassistant:
+    container_name: homeassistant
     image: homeassistant/home-assistant
     restart: unless-stopped
     network_mode: host
