--- a/apache/docker-compose.yml
+++ b/apache/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 
 services:
   apache:
+    container_name: apache
     build: .
     restart: unless-stopped
     ports:
-      - 127.0.0.1:8000:80
+      - 127.0.0.1:80:80
     volumes:
       - ./html:/var/www/html
