--- a/lamp-stack/docker-compose.yml
+++ b/lamp-stack/docker-compose.yml
@@ -2,18 +2,21 @@ version: '3'
 
 services:
   db:
+    container_name: db
     image: mysql:5.6
     restart: unless-stopped
+    volumes:
+      - ./mysql:/docker-entrypoint-initdb.d/
     environment:
       MYSQL_ROOT_PASSWORD: root
-    volumes:
-      - ./mysql:/docker-entrypoint-initdb.d
-  app:
+
+  apache:
+    container_name: apache
     image: php:5.6-apache
     restart: unless-stopped
     volumes:
       - ./html:/var/www/html
     ports:
-      - 127.0.0.1:8000:80
+      - 127.0.0.1:80:80
     depends_on:
       - db
