--- a/mosquitto/docker-compose.yml
+++ b/mosquitto/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   mosquitto:
+    container_name: mosquitto
     image: eclipse-mosquitto
     restart: unless-stopped
     volumes:
