--- a/pihole/Makefile
+++ b/pihole/Makefile
@@ -10,11 +10,10 @@ restart:
 logs:
 	docker-compose logs -f
 
-rm: down
-	docker-compose rm
-
-clean: rm
-	rm -rf ./etc-dnsmasq.d/*
-	rm -rf ./etc-pihole/*
+clean:
+	docker-compose down -t 0
+	docker-compose rm -fv
+	sudo rm -rf ./etc-dnsmasq.d/*
+	sudo rm -rf ./etc-pihole/*
 
 .PHONY: *
