--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     image: pihole/pihole:latest
     restart: unless-stopped
     network_mode: host
-    environment:
-      TZ: "America/NewYork"
-      DNS1: 208.67.222.222
-      DNS2: 208.67.220.220
-      DNSSEC: "true"
     volumes:
        - ./etc-pihole:/etc/pihole/
        - ./etc-dnsmasq.d:/etc/dnsmasq.d/
+    environment:
+      TZ: America/NewYork
+      DNS1: 208.67.222.222
+      DNS2: 208.67.220.220
+      DNSSEC: "true"
