--- a/portainer/Makefile
+++ b/portainer/Makefile
@@ -10,10 +10,9 @@ restart:
 logs:
 	docker-compose logs -f
 
-rm: down
-	docker-compose rm
-
-clean: rm
+clean:
+	docker-compose down -t 0
+	docker-compose rm -fv
 	sudo rm -rf ./portainer_data/*
 
 .PHONY: *
