--- a/samba/Makefile
+++ b/samba/Makefile
@@ -11,10 +11,9 @@ restart:
 logs:
 	docker-compose logs -f
 
-rm: down
-	docker-compose rm
-
-clean: rm
+clean:
+	docker-compose down -t 0
+	docker-compose rm -fv
 	sudo rm -rf ./storage/*
 
 .PHONY: *
