--- a/zigbee2mqtt/docker-compose.yml
+++ b/zigbee2mqtt/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   zigbee2mqtt:
+    container_name: zigbee2mqtt
     image: koenkk/zigbee2mqtt
     restart: unless-stopped
     network_mode: host
