--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mariadb
     restart: unless-stopped
     volumes:
-      - ./nextcloud/db/:/var/lib/mysql/
+      - ./db/:/var/lib/mysql/
     environment:
       - MYSQL_ROOT_PASSWORD=root
     env_file:
@@ -22,8 +22,8 @@ services:
     ports:
       - 127.0.0.1:8000:80
     volumes:
-      - ./nextcloud/html/:/var/www/html/
-      - ./nextcloud/data/:/var/www/html/data/
+      - ./html/:/var/www/html/
+      - ./data/:/var/www/html/data/
     environment:
       - MYSQL_HOST=db
       - REDIS_HOST=redis
@@ -38,8 +38,8 @@ services:
     build: nextcloud-cron
     restart: unless-stopped
     volumes:
-      - ./nextcloud/html/.:/var/www/html/
-      - ./nextcloud/data/:/var/www/html/data/
+      - ./html/:/var/www/html/
+      - ./data/:/var/www/html/data/
     environment:
       - MYSQL_HOST=db
       - REDIS_HOST=redis
