--- a/pterodactyl/wings/docker-compose.yaml
+++ b/pterodactyl/wings/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   wings:
     image: ghcr.io/pterodactyl/wings:latest
-    restart: always
+    restart: unless-stopped
     networks:
       - wings0
     ports:
@@ -20,9 +20,9 @@ services:
       - "/var/lib/docker/containers/:/var/lib/docker/containers/"
       - "/etc/ssl/certs:/etc/ssl/certs:ro"
       - "./pterodactyl/etc/:/etc/pterodactyl/"
-      - "./pterodactyl/lib/:/var/lib/pterodactyl/"
       - "./pterodactyl/log/:/var/log/pterodactyl/"
       - "./pterodactyl/tmp/:/tmp/pterodactyl/"
+      - "./pterodactyl/lib/:/var/lib/pterodactyl/"
       # you may need /srv/daemon-data if you are upgrading from an old daemon
       #- "/srv/daemon-data/:/srv/daemon-data/"
       # Required for ssl if you use let's encrypt. uncomment to use.
