--- a/pterodactyl/wings/docker-compose.yaml
+++ b/pterodactyl/wings/docker-compose.yaml
@@ -18,11 +18,11 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/var/lib/docker/containers/:/var/lib/docker/containers/"
+      - "/etc/pterodactyl/:/etc/pterodactyl/"
+      - "/var/lib/pterodactyl/:/var/lib/pterodactyl/"
+      - "/var/log/pterodactyl/:/var/log/pterodactyl/"
+      - "/tmp/pterodactyl/:/tmp/pterodactyl/"
       - "/etc/ssl/certs:/etc/ssl/certs:ro"
-      - "./pterodactyl/etc/:/etc/pterodactyl/"
-      - "./pterodactyl/log/:/var/log/pterodactyl/"
-      - "./pterodactyl/tmp/:/tmp/pterodactyl/"
-      - "./pterodactyl/lib/:/var/lib/pterodactyl/"
       # you may need /srv/daemon-data if you are upgrading from an old daemon
       #- "/srv/daemon-data/:/srv/daemon-data/"
       # Required for ssl if you use let's encrypt. uncomment to use.
