chore: update to docker compose

--- a/openldap/Makefile
+++ b/openldap/Makefile
@@ -1,14 +1,14 @@
 up: down
-	docker-compose up -d
+	docker compose up -d
 
 down:
-	docker-compose down
+	docker compose down
 
 restart:
-	docker-compose restart
+	docker compose restart
 
 logs:
-	docker-compose logs -f
+	docker compose logs -f
 
 clean: rm
 	sudo rm -rf ./certs/*
