--- a/element/Makefile
+++ b/element/Makefile
@@ -1,18 +1,18 @@
 up: down
 	touch config.json
-	docker-compose up -d
+	docker compose up -d
 
 down:
-	docker-compose down
+	docker compose down
 
 restart:
-	docker-compose restart
+	docker compose restart
 
 logs:
-	docker-compose logs -f
+	docker compose logs -f
 
 clean:
-	docker-compose down -t 0
-	docker-compose rm -fv
+	docker compose down -t 0
+	docker compose rm -fv
 
 .PHONY: *
