--- a/pihole/Makefile
+++ b/pihole/Makefile
@@ -1,18 +1,18 @@
 up: down
-	docker-compose up -d
+	docker compose up -d
 
 down:
-	docker-compose down
+	docker compose down
 
 restart:
-	docker-compose restart
+	docker compose restart
 
 logs:
-	docker-compose logs -f
+	docker compose logs -f
 
 clean:
-	docker-compose down -t 0
-	docker-compose rm -fv
+	docker compose down -t 0
+	docker compose rm -fv
 	sudo rm -rf ./etc-dnsmasq.d/*
 	sudo rm -rf ./etc-pihole/*
 
