--- a/tor-relay/Makefile
+++ b/tor-relay/Makefile
@@ -1,17 +1,17 @@
 up: down
-	docker-compose up -d
+	docker compose up -d
 
 down:
-	docker-compose down
+	docker compose down
 
 restart:
-	docker-compose restart
+	docker compose restart
 
 logs:
-	docker-compose logs -f
+	docker compose logs -f
 
 clean:
-	docker-compose down -t 0
-	docker-compose rm -fv
+	docker compose down -t 0
+	docker compose rm -fv
 
 .PHONY: *
