--- a/teamspeak/docker-compose.yml
+++ b/teamspeak/docker-compose.yml
@@ -3,13 +3,17 @@ version: '3'
 services:
   teamspeak:
     image: teamspeak
-    restart: always
+    restart: unless-stopped
     ports:
       - 9987:9987/udp
       - 10011:10011
       - 30033:30033
+    volumes:
+      - ./data/ts3server:/var/ts3server
     env_file: .env
   db:
     image: mariadb
-    restart: always
+    restart: unless-stopped
+    volumes:
+      - ./data/db:/var/lib/mysql
     env_file: .env
