--- a/firefly-iii/docker-compose.yml
+++ b/firefly-iii/docker-compose.yml
@@ -1,30 +1,38 @@
 services:
   app:
     image: fireflyiii/core:latest
+    hostname: app
+    container_name: firefly_iii_core
     restart: unless-stopped
     volumes:
-      - ./data/upload:/var/www/html/storage/upload
-    ports:
-      - 8000:8080
+      - ./data/firefly_iii_upload:/var/www/html/storage/upload
     env_file: .env
+    ports:
+      - 80:8080
     depends_on:
       - db
   db:
     image: mariadb:lts
+    hostname: db
+    container_name: firefly_iii_db
     restart: unless-stopped
     env_file: .db.env
     volumes:
-      - ./data/mysql:/var/lib/mysql
+      - ./data/firefly_iii_db:/var/lib/mysql
   cron:
     #
-    # To make this work, set STATIC_CRON_TOKEN in your .env file or as an environment variable and replace REPLACEME below
+    # To make this work, set STATIC_CRON_TOKEN in your .env file or as an environment variable
     # The STATIC_CRON_TOKEN must be *exactly* 32 characters long
     #
     image: alpine
+    restart: unless-stopped
+    container_name: firefly_iii_cron
     env_file: .env
     command: sh -c "
-      apk add tzdata
-      && ln -s /usr/share/zoneinfo/${TZ} /etc/localtime
-      | echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/REPLACEME;echo\"
-      | crontab -
-      && crond -f -L /dev/stdout"
+      apk add tzdata && \
+      ln -fs /usr/share/zoneinfo/$$TZ /etc/localtime && \
+      echo \"0 3 * * * wget -qO- http://app:8080/api/v1/cron/$$STATIC_CRON_TOKEN;echo\"
+      | crontab - && \
+      crond -f -L /dev/stdout"
+    depends_on:
+      - app
