--- a/invoice-ninja/docker-compose.yml
+++ b/invoice-ninja/docker-compose.yml
@@ -1,29 +1,18 @@
-x-logging: &default-logging
-  options:
-    max-size: "10m"
-    max-file: "3"
-  driver: json-file
-
 services:
   app:
-    image: invoiceninja/invoiceninja:atest
+    image: invoiceninja/invoiceninja-debian:latest
     restart: unless-stopped
-    env_file:
-      - ./.env
     volumes:
       - ./.env:/var/www/html/.env
-      # - ./php/php.ini:/usr/local/etc/php/conf.d/invoiceninja.ini:ro
-      # - ./php/php-fpm.conf:/usr/local/etc/php-fpm.d/invoiceninja.conf:ro
-      # - ./supervisor/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf:ro
-      - ./data/cache:/var/www/html/bootstrap/cache
-      - ./data/public:/var/www/html/public
-      - ./data/storage:/var/www/html/storage
+      - ./data/app_public:/var/www/html/public
+      - ./data/app_storage:/var/www/html/storage
+    env_file:
+      - ./.env
     depends_on:
       mysql:
         condition: service_healthy
       redis:
         condition: service_healthy
-    logging: *default-logging
 
   nginx:
     image: nginx:alpine
@@ -32,15 +21,16 @@ services:
       - "8000:80"
     volumes:
       - ./nginx:/etc/nginx/conf.d:ro
-      - ./data/public:/var/www/html/public:ro
-      - ./data/storage:/var/www/html/storage:ro
+      - ./data/app_public:/var/www/html/public:ro
+      - ./data/app_storage:/var/www/html/storage:ro
     depends_on:
       - app
-    logging: *default-logging
 
   mysql:
     image: mysql:8
     restart: unless-stopped
+    volumes:
+      - ./data/mysql_data:/var/lib/mysql
     env_file:
       - ./.env
     environment:
@@ -48,23 +38,19 @@ services:
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-    volumes:
-      - ./data/mysql:/var/lib/mysql
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u${MYSQL_USER}", "-p${MYSQL_PASSWORD}" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    logging: *default-logging
 
   redis:
     image: redis:alpine
     restart: unless-stopped
     volumes:
-      - ./data/redis:/data
+      - ./data/redis_data:/data
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    logging: *default-logging
