--- a/sonatype-nexus/.env.example
+++ b/sonatype-nexus/.env.example
@@ -2,7 +2,6 @@ POSTGRES_DB=nexus
 POSTGRES_USER=nexus
 POSTGRES_PASSWORD=NEXUS_PASSWORD_CHANGE_ME
 
-NEXUS_JDBC_URL=jdbc:postgresql://db:5432/nexus?currentSchema=nexus
-NEXUS_PG_SCHEMA=nexus
-NEXUS_DB_USERNAME=nexus
-NEXUS_DB_PASSWORD=NEXUS_PASSWORD_CHANGE_ME
+NEXUS_DATASTORE_NEXUS_JDBCURL=jdbc:postgresql://db:5432/nexus?currentSchema=nexus
+NEXUS_DATASTORE_NEXUS_USERNAME=nexus
+NEXUS_DATASTORE_NEXUS_PASSWORD=NEXUS_PASSWORD_CHANGE_ME
